@@ -1,5 +1,6 @@
 Template: anna/choose_modules
 Type: multiselect
+Choices-C: ${CHOICES-C}
 Choices: ${CHOICES}
 # :sl2:
 _Description: Installer components to load:
@@ -13,6 +14,7 @@ _Description: Installer components to load:
 
 Template: anna/choose_modules_lowmem
 Type: multiselect
+Choices-C: ${CHOICES-C}
 Choices: ${CHOICES}
 # :sl2:
 _Description: Installer components to load:
